# rlt_task

./: .gitignore  Dockerfile  Task.docx  agregator_test.py  docker-compose.yml  main.py  pyproject copy.toml  pyproject.toml
handlers/: agregators.py  commands.py
settings/: config.py  settings.ini
tools/: db_agregator.py
